<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="580dp"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="254dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerHorizontal="true">

        <TextView
            android:id="@+id/enter_barcode_lbl"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/droidkufi_regular"
            android:text="@string/barcode_number"
            android:textAlignment="center"
            android:textColor="@color/sl_dark_blue"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/barcode_number_txt"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:paddingStart="5dp"
            android:maxLines="1"
            android:inputType="number"
            android:imeOptions="actionDone"
            android:background="@drawable/rect_white_border_blue"
            android:textSize="22sp" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <Button
                android:id="@+id/barcode_one_btn"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:text="@string/one"
                android:textSize="45sp"
                android:textColor="@color/white"
                android:background="@color/sl_teal"
                android:fontFamily="@font/droidkufi_bold"/>

            <Button
                android:id="@+id/barcode_two_btn"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_alignBottom="@+id/barcode_one_btn"
                android:layout_toEndOf="@+id/barcode_one_btn"
                android:layout_marginStart="5dp"
                android:background="@color/sl_teal"
                android:fontFamily="@font/droidkufi_bold"
                android:text="@string/two"
                android:textColor="@color/white"
                android:textSize="45sp"
                android:stateListAnimator="@null"/>

            <Button
                android:id="@+id/barcode_three_btn"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:text="@string/three"
                android:layout_alignBottom="@+id/barcode_two_btn"
                android:layout_toEndOf="@+id/barcode_two_btn"
                android:layout_marginStart="5dp"
                android:textSize="45sp"
                android:textColor="@color/white"
                android:background="@color/sl_teal"
                android:fontFamily="@font/droidkufi_bold"
                android:stateListAnimator="@null"/>

            <Button
                android:id="@+id/barcode_four_btn"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginTop="5dp"
                android:layout_below="@+id/barcode_one_btn"
                android:text="@string/four"
                android:textSize="45sp"
                android:textColor="@color/white"
                android:background="@color/sl_teal"
                android:fontFamily="@font/droidkufi_bold"
                android:stateListAnimator="@null"/>

            <Button
                android:id="@+id/barcode_five_btn"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_alignBottom="@+id/barcode_four_btn"
                android:layout_toEndOf="@+id/barcode_four_btn"
                android:layout_below="@+id/barcode_two_btn"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:background="@color/sl_teal"
                android:fontFamily="@font/droidkufi_bold"
                android:text="@string/five"
                android:textColor="@color/white"
                android:textSize="45sp"
                android:stateListAnimator="@null"/>

            <Button
                android:id="@+id/barcode_six_btn"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:text="@string/six"
                android:layout_below="@+id/barcode_one_btn"
                android:layout_alignBottom="@+id/barcode_five_btn"
                android:layout_toEndOf="@+id/barcode_five_btn"
                android:layout_marginTop="5dp"
                android:layout_marginStart="5dp"
                android:textSize="45sp"
                android:textColor="@color/white"
                android:background="@color/sl_teal"
                android:fontFamily="@font/droidkufi_bold"
                android:stateListAnimator="@null"/>

            <Button
                android:id="@+id/barcode_seven_btn"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginTop="5dp"
                android:layout_below="@+id/barcode_four_btn"
                android:text="@string/seven"
                android:textSize="45sp"
                android:textColor="@color/white"
                android:background="@color/sl_teal"
                android:fontFamily="@font/droidkufi_bold"
                android:stateListAnimator="@null"/>

            <Button
                android:id="@+id/barcode_eight_btn"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_alignBottom="@+id/barcode_seven_btn"
                android:layout_toEndOf="@+id/barcode_seven_btn"
                android:layout_below="@+id/barcode_five_btn"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:background="@color/sl_teal"
                android:fontFamily="@font/droidkufi_bold"
                android:text="@string/eight"
                android:textColor="@color/white"
                android:textSize="45sp"
                android:stateListAnimator="@null"/>

            <Button
                android:id="@+id/barcode_nine_btn"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:text="@string/nine"
                android:layout_below="@+id/barcode_six_btn"
                android:layout_alignBottom="@+id/barcode_eight_btn"
                android:layout_toEndOf="@+id/barcode_eight_btn"
                android:layout_marginTop="5dp"
                android:layout_marginStart="5dp"
                android:textSize="45sp"
                android:textColor="@color/white"
                android:background="@color/sl_teal"
                android:fontFamily="@font/droidkufi_bold"
                android:stateListAnimator="@null"/>

            <Button
                android:id="@+id/barcode_plus_btn"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginTop="5dp"
                android:layout_below="@+id/barcode_seven_btn"
                android:visibility="invisible"
                android:text="+"
                android:textSize="45sp"
                android:enabled="false"
                android:textColor="@android:color/black"
                android:background="@android:color/white"
                android:fontFamily="@font/droidkufi_bold"
                android:stateListAnimator="@null"/>

            <Button
                android:id="@+id/barcode_zero_btn"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_alignBottom="@+id/barcode_plus_btn"
                android:layout_toEndOf="@+id/barcode_plus_btn"
                android:layout_below="@+id/barcode_eight_btn"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:background="@color/sl_teal"
                android:fontFamily="@font/droidkufi_bold"
                android:text="0"
                android:textColor="@color/white"
                android:textSize="45sp"
                android:stateListAnimator="@null"/>

            <Button
                android:id="@+id/barcode_delete_nb_btn"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:text="X"
                android:layout_below="@+id/barcode_nine_btn"
                android:layout_alignBottom="@+id/barcode_zero_btn"
                android:layout_toEndOf="@+id/barcode_zero_btn"
                android:layout_marginTop="5dp"
                android:layout_marginStart="5dp"
                android:textSize="45sp"
                android:textColor="@color/sl_teal"
                android:background="@android:color/white"
                android:fontFamily="@font/droidkufi_bold"
                android:stateListAnimator="@null"/>
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:orientation="vertical"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true">

        <Button
            android:id="@+id/barcode_submit_btn"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:textSize="22sp"
            android:textColor="@color/white"
            android:fontFamily="@font/droidkufi_regular"
            android:background="@color/sl_green"
            android:text="@string/submit"/>

    </LinearLayout>

</RelativeLayout>