<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/white">


    <RelativeLayout
        android:layout_width="240dp"
        android:layout_height="153dp"
        android:layout_centerInParent="true"
        android:layout_marginTop="53dp"
        android:background="@color/white">

        <TextView
            android:id="@+id/exit_quest_lbl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/sl_teal"
            android:text="@string/exit_quest"
            android:textAllCaps="true"
            android:textSize="22sp"
            android:fontFamily="@font/droidkufi_regular"
            android:textAlignment="center"
            android:layout_centerHorizontal="true"/>

        <RelativeLayout
            android:id="@+id/exit_dlg_btn_grp"
            android:layout_width="240dp"
            android:layout_height="51dp"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true">

            <Button
                android:id="@+id/exit_yes_btn"
                android:layout_width="70dp"
                android:layout_height="51dp"
                android:text="@string/exit_yes"
                android:fontFamily="@font/droidkufi_regular"
                android:layout_alignParentStart="true"
                android:background="@color/sl_orange"
                android:textColor="@color/white"
                android:textSize="20sp"/>

            <Button
                android:id="@+id/exit_no_btn"
                android:layout_width="70dp"
                android:layout_height="51dp"
                android:text="@string/exit_no"
                android:fontFamily="@font/droidkufi_regular"
                android:layout_alignParentEnd="true"
                android:background="@color/sl_orange"
                android:textColor="@color/white"
                android:textSize="20sp"/>
        </RelativeLayout>

    </RelativeLayout>






</RelativeLayout>